# anvil-zksync

./: .gitignore  .gitmodules  .yarnrc.yml  CHANGELOG.md  Cargo copy.toml  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  SUPPORTED_APIS.md  WORK.md  combined.profdata  default_4562844410435562630_0_242852.profraw  default_4562844410435562630_0_270967.profraw  default_4562844410435562630_0_271009.profraw  default_4562844410435562630_0_274468.profraw  default_4562844410435562630_0_274489.profraw  default_4562844410435562630_0_274641.profraw  default_4562844410435562630_0_274671.profraw  default_4562844410435562630_0_276408.profraw  default_4562844410435562630_0_276689.profraw  default_4562844410435562630_0_276739.profraw  default_4562844410435562630_0_276784.profraw  default_4562844410435562630_0_276878.profraw  default_4562844410435562630_0_277267.profraw  default_4562844410435562630_0_277943.profraw  default_4562844410435562630_0_278109.profraw  default_4562844410435562630_0_278201.profraw  default_4562844410435562630_0_278277.profraw  default_4562844410435562630_0_278335.profraw  default_4562844410435562630_0_278388.profraw  deny.toml  install.sh  package.json  rust-toolchain.toml  rust-toolchain.yaml  test_endpoints.http  versions.json
.github/: CONTRIBUTING.md  pull_request_template.md
Formula/: anvil-zksync.rb
crates/api_server/: Cargo.toml
crates/api_server/src/: error.rs  lib.rs  server.rs
crates/api_server/src/impls/: anvil.rs  anvil_ext.rs  anvil_zks.rs  boojumos.rs  config.rs  debug.rs  eth.rs  eth_test.rs  evm.rs  mod.rs  net.rs  zkos.rs  zks.rs
crates/api_server/src/node/: debug.rs  eth.rs  in_memory.rs  in_memory_ext.rs  mod.rs  testing.rs  zks.rs
crates/common/: Cargo.toml
crates/common/src/: address_map.rs  cache.rs  lib.rs  resolver.rs  shell.rs
crates/common/src/data/: abi_map.json  address_map.json
crates/common/src/utils/: cost.rs  mod.rs  numbers.rs  predeploys.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: cache.rs  console_log.rs  console_tracer.rs  filters.rs  fork.rs  formatter.rs  lib.rs  observability.rs  resolver.rs  system_contracts.rs  testing.rs  utils.rs
crates/core/src/data/: address_map.json
crates/core/src/formatter/: address.rs  errors.rs  log.rs  mod.rs  transaction.rs
crates/core/src/formatter/errors/: mod.rs  view.rs
crates/core/src/formatter/errors/documentation/: mod.rs  view.rs
crates/core/src/formatter/transaction/: mod.rs  summary.rs  view.rs
crates/core/src/namespaces/: mod.rs
crates/core/src/node/: block_producer.rs  boojumos.rs  call_error_tracer.rs  console.rs  debug.rs  error.rs  eth.rs  fee_model.rs  hardhat.rs  in_memory.rs  in_memory_ext.rs  keys.rs  mod.rs  pool.rs  sealer.rs  state.rs  state_override.rs  storage_logs.rs  vm.rs  zkos.rs  zks.rs  zksync_os.rs
crates/core/src/node/batch/: executor.rs  factory.rs
crates/core/src/node/diagnostics/: mod.rs  transaction.rs
crates/core/src/node/diagnostics/vm/: balance_diff.rs  mod.rs
crates/core/src/node/inner/: blockchain.rs  canonisator.rs  fork.rs  fork_storage.rs  in_memory_inner.rs  mod.rs  node_executor.rs  time.rs  vm_runner.rs
crates/core/src/node/tests/: debug.rs
crates/core/src/node/traces/: decoder.rs  mod.rs
crates/core/src/node/zksync_os/: mod.rs  tx_conversions.rs  zkos_conversions.rs
crates/core/src/node/zksync_os/execution/: block_executor.rs  sandbox.rs
crates/core/src/node/zksync_os/mock/: mod.rs
crates/core/src/node/zksync_os/real/: helpers.rs  mod.rs
crates/core/src/node/zksync_os/storage/: block_replay_storage.rs  in_memory_account_properties.rs  in_memory_block_receipts.rs  mod.rs  persistent_storage_map.rs  rocksdb_preimages.rs  storage_map.rs  storage_metrics.rs
crates/core/src/trace/: abi_utils.rs  formatterv2.rs  mod.rs  signatures.rs  types.rs  writer.rs
crates/core/src/trace/decode/: mod.rs  revert_decoder.rs
crates/l1_sidecar/: Cargo.toml
crates/l1_sidecar/src/: anvil.rs  commitment_generator.rs  l1_executor.rs  l1_sender.rs  l1_watcher.rs  lib.rs  upgrade_tx.rs
crates/l1_sidecar/src/contracts/: mod.rs
crates/l1_sidecar/src/contracts/artifacts/: IZKChain.json
crates/l1_sidecar/src/contracts/sol/: IExecutor.sol  IExecutorV28.sol  IExecutorV29.sol
crates/l1_sidecar/src/zkstack_config/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  log.rs  numbers.rs  predeploys.rs  serde_helpers.rs  show_details.rs  traces.rs
crates/zksync_error/: Cargo.toml  build.rs
crates/zksync_error/resources/: error-model-dump.json  model.json
crates/zksync_error/src/: documentation.rs  identifier.rs  kind.rs  lib.rs  packed.rs  serialized.rs  untyped.rs
crates/zksync_error/src/error/: definitions.rs  domains.rs  mod.rs
docs/: bootloader-debug-guide.md  experimental-zkos.md  experimental-zksyncos.md  zksync-error-howto.md
e2e-tests/: .eslintrc.js  .gitignore  .prettierrc  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
e2e-tests-rust/: Cargo.toml
example/: config.toml
examples/: config.toml
l1-setup/: .gitignore  README.md  ZkStack.yaml  package.json  setup.sh
latest/: print.html  searchindex.js  searchindex.json  toc.html  toc.js
scripts/: execute-e2e-tests.sh  install.sh  nodeinstaller.sh  refresh_contracts.sh  refresh_e2e_contracts.sh  refresh_test_contracts.sh  start_dev_node.sh  stop_dev_node.sh  update_version.sh
spec-tests/: Cargo.toml
src/: bootloader_debug.rs  bytecode_override.rs  cache.rs  cheatcodes.rs  configuration_api.rs  console_log.rs  debug.rs  evm.rs  filters.rs  fork.rs  formatter.rs  hardhat.rs  http_fork_source.rs  jsonrpc_error.rs  lib.rs  logging_middleware.rs  main.rs  net.rs  node.rs  observability.rs  resolver.rs  system_contracts.rs  testing.rs  utils.rs  zks.rs
v0.6.0/: index.html  print.html  searchindex.js  searchindex.json
v0.6.1/: print.html  searchindex.js  searchindex.json
v0.6.11/: print.html  searchindex.js
v0.6.2/: searchindex.json
v0.6.3/: searchindex.js
v0.6.4/: print.html  toc.js
v0.6.5/: toc.html
v0.6.6/: print.html  searchindex.js  searchindex.json  toc.html  toc.js
(+16382 files in other folders)
