[package]
name = "zksync_error"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = [ "rc" ] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
zksync-error-description.workspace = true
